RESOLVED FIXED210710
REGRESSION (r244091): Leak of TaskStateChangedCallbackType due to missing -dealloc
https://bugs.webkit.org/show_bug.cgi?id=210710
Summary REGRESSION (r244091): Leak of TaskStateChangedCallbackType due to missing -de...
David Kilzer (:ddkilzer)
Reported 2020-04-18 19:26:57 PDT
Leak of TaskStateChangedCallbackType due to missing -dealloc. Found by clang static analyzer: 'WKProcessTaskStateObserverDelegate' lacks a 'dealloc' instance method but must release '_taskStateChangedCallback' Regressed with the fix for Bug 196659 in r244091: Bug 196659: [Cocoa] Awaken UIProcess if WebContent process is awakened from suspensions unexpectedly. <https://bugs.webkit.org/show_bug.cgi?id=196659> <rdar://problem/49745738> <https://trac.webkit.org/r244091>
Attachments
Patch v1 (1.66 KB, patch)
2020-04-18 19:36 PDT, David Kilzer (:ddkilzer)
no flags
Patch for landing (1.64 KB, patch)
2020-04-19 19:08 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-18 19:27:31 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-04-18 19:36:02 PDT
Created attachment 396887 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 3 2020-04-18 19:37:25 PDT
Comment on attachment 396887 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=396887&action=review > Source/WebKit/Shared/Cocoa/ProcessTaskStateObserver.mm:46 > +- (void)dealloc I chose to implement dealloc because using RetainPtr<> would require an instance variable and a custom getter (and maybe a setter). When switching to ARC, we simply delete the -dealloc method and the @property will work as expected.
Darin Adler
Comment 4 2020-04-19 18:07:46 PDT
Comment on attachment 396887 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=396887&action=review > Source/WebKit/Shared/Cocoa/ProcessTaskStateObserver.mm:49 > + _taskStateChangedCallback = nil; Seems unnecessary to set things to nil in dealloc.
David Kilzer (:ddkilzer)
Comment 5 2020-04-19 19:08:06 PDT
Created attachment 396935 [details] Patch for landing
EWS
Comment 6 2020-04-19 20:46:44 PDT
Committed r260348: <https://trac.webkit.org/changeset/260348> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396935 [details].
Note You need to log in before you can comment on or make changes to this bug.