REGRESSION (r244091): Leak of TaskStateChangedCallbackType due to missing -dealloc <https://webkit.org/b/210710> <rdar://problem/61992856>

Reviewed by Darin Adler.

* Shared/Cocoa/ProcessTaskStateObserver.mm:
(-[WKProcessTaskStateObserverDelegate dealloc]): Add.
- Release _taskStateChangedCallback to fix the leak.


Canonical link: https://commits.webkit.org/223608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260348 268f45cc-cd09-0410-ab3c-d52691b4dbfc